--- a/Projects.qmd
+++ b/Projects.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Understanding Medications: Uncovering Side Effects"
 description: "Lance Nemecek and Jackson Marsh"
-image: images/MedicationsPic.jpg
+image: images/Medicationspic1.jpg
 categories:
   - Medicine
   - Data Science
