--- a/us_states.qmd
+++ b/us_states.qmd
@@ -1,3 +1,39 @@
 ---
-title: "Mapping"
+title: "Wisconsin"
 ---
+```{r, include = FALSE}
+library(ggplot2)
+library(tidyverse)
+library(dplyr)
+library(maps)
+library(mdsr)
+library(sf)
+```
+
+```{r, include = FALSE}
+library(readr)
+StateObesity <- read_csv("State_Obesity.csv")
+us_states <- map_data("state")
+```
+
+
+My dataset comprises national obesity percentages categorized by state. The "Obesity" field attribute denotes the percentage of each state's population classified as obese, based on the 2015 CDC BRFSS Survey. The dataset is structured as a tibble with five columns, including an object ID, "NAME," "obesity," "shape_area," and "shape_length." For this analysis, I focused solely on the obesity percentages. The dataset I'm joining with provides latitude and longitude coordinates for each state. To merge the obesity percentages with their corresponding latitude and longitude coordinates, I performed a right join. It's necessary to convert the state names to lowercase using the *str_to_lower* function because they are capitalized in the "StateObesity" tibble but are lowercase in the "us_states" tibble, ensuring accurate matching between the datasets.
+
+```{r}
+StateObesity |>
+  mutate(NAME = str_squish(str_to_lower(as.character(NAME)))) |>
+  select(NAME, Obesity) |>
+  right_join(us_states, by = c("NAME" = "region")) |>
+  
+  ggplot(mapping = aes(x = long, y = lat,
+                          group = group)) + 
+  geom_polygon(aes(fill = Obesity), color = "black") +
+  labs(title = "Obesity Rates by State",
+       x = "Longitude",
+       y = "Latitude",
+       fill = "Obesity Rate")+
+  scale_fill_viridis_c() +
+  theme_classic()
+```
+
+The plot reveals distinct patterns in state obesity rates. Colorado stands out with the lowest average obesity rate, while Louisiana appears to have the highest. Along the West Coast, as well as in other regions, darker blue and purple hues dominate, indicating relatively lower obesity rates. Conversely, the southeastern part of the country is characterized by bright yellow shades, signifying a notably higher average obesity rate in those states.
