--- a/wisconsin_districts.qmd
+++ b/wisconsin_districts.qmd
@@ -1,26 +1,131 @@
 ---
-title: "Wisconsin"
+title: "Congressional Districs of Wisconsin"
+editor_options: 
+  chunk_output_type: console
 ---
 
-For this project I will be using the state.x77 package provided by R. This packake is A matrix with 50 rows and 8 columns giving the following statistics in the respective columns.
+```{r, include = FALSE}
+library(ggplot2)
+library(tidyverse)
+library(dplyr)
+library(maps)
+library(mdsr)
+library(fec16)
+library(sf)
+```
 
-Population: population estimate as of July 1, 1975
 
-Income: per capita income (1974)
+```{r, include=FALSE}
+print(results_house, width = Inf)
+results_house |>
+  group_by(state, district_id) |>
+  summarize(N = n())
+```
 
-Illiteracy: illiteracy (1970, percent of population)
-
-Life Exp: life expectancy in years (1969-71)
-
-Murder: murder and non-negligent manslaughter rate per 100,000 population (1976)
-
-HS Grad: percent high-school graduates (1970)
-
-Frost: mean number of days with minimum temperature below freezing (1931-1960) in capital or large city
-
-Area: land area in square miles
+```{r, include=FALSE}
+district_elections <- results_house |>
+  mutate(district = parse_number(district_id)) |>
+  group_by(state, district) |>
+  summarize(
+    N = n(), 
+    total_votes = sum(general_votes, na.rm = TRUE),
+    d_votes = sum(ifelse(party == "DEM", general_votes, 0), na.rm = TRUE),
+    r_votes = sum(ifelse(party == "REP", general_votes, 0), na.rm = TRUE),
+    .groups = "drop"
+  ) |>
+  mutate(
+    other_votes = total_votes - d_votes - r_votes,
+    r_prop = r_votes / total_votes,  
+    winner = ifelse(r_votes > d_votes, "Republican", "Democrat")
+  )
+wi_results <- district_elections |>
+  filter(state == "WI")
+wi_results |>                  
+  select(-state)
+```
 
 ```{r, include = FALSE}
-state.x77
+library(kableExtra)
 ```
+
+Wisconsin's susceptibility to gerrymandering arises from its identity as a swing state characterized by contested elections. The state's distinct urban-rural disparity offers fertile ground for biased manipulation of electoral boundaries, prompting concerns regarding equal representation. To show these suspicions, we have leveraged data sourced from congressional district shape files for the 113th Congress, obtained from a UCLA website, and overlaid them onto the geographical borders of Wisconsin's congressional districts. The  table below provides a breakdown of the eight congressional districts alongside the respective percentages of Republican voters in each district.
+
+```{r, echo=FALSE}
+# distribution of total number of votes is narrow by design
+# Proportion of Rep votes by district
+wi_results |>
+  select(district, r_prop, winner) |>
+  arrange(desc(r_prop)) |>
+  kable()
+```
+
+We observe a trend where Republican districts secure victories by narrow margins, contrasting with Democratic districts that either lack Republican voters entirely or win their districts uncontested. This suggests a potential instance of gerrymandering, where the state is strategically divided, concentrating Democratic voters into a single area to account for only one electoral representative, while Republicans dominate the majority of other districts.
+
+These plots show the political party of each winning district as well as their shape and size relative to the state as well as the other districts. 
+
+```{r, include =FALSE}
+# Download congressional district shapefiles for the 113th Congress from a UCLA website (don't sweat the details too much)
+src <- "http://cdmaps.polisci.ucla.edu/shp/districts113.zip"
+lcl_zip <- fs::path(tempdir(), "districts113.zip")
+download.file(src, destfile = lcl_zip)
+lcl_districts <- fs::path(tempdir(), "districts113")
+unzip(lcl_zip, exdir = lcl_districts)
+dsn_districts <- fs::path(lcl_districts, "districtShapes")
+
+# You can also downloaded zip file and uploaded it into R, but this uses a ton of space!
+# dsn_districts <- fs::path("Data/districtShapes")
+
+# read shapefiles into R as an sf object
+st_layers(dsn_districts)
+
+# be able to read as a data frame as well
+districts <- st_read(dsn_districts, layer = "districts113") |>
+  mutate(DISTRICT = parse_number(as.character(DISTRICT)))
+head(districts, width = Inf)
+class(districts)
+
+# create basic plot with WI congressional districts
+wi_shp <- districts |>
+  filter(STATENAME == "Wisconsin")
+wi_shp |>
+  st_geometry() |>
+  plot(col = gray.colors(nrow(wi_shp)))
+
+# Append election results to geospatial data
+wi_merged <- wi_shp |>
+  st_transform(4326) |>
+  inner_join(wi_results, by = c("DISTRICT" = "district"))
+head(wi_merged, width = Inf)
+
+# Color based on winning party
+#   Note that geom_sf is part of ggplot2 package, while st_geometry is
+#   part of sf package
+```
+
+
+```{r, echo = FALSE}
+wi <- ggplot(data = wi_merged, aes(fill = winner)) +
+  geom_sf(alpha = 0.5) +
+  scale_fill_manual("Winner", values = c("blue", "red")) + 
+  geom_sf_label(aes(label = DISTRICT), fill = "white") + 
+  theme_void()
+wi 
+```
+
+
+```{r, echo = FALSE}
+library(leaflet)
+pal <- colorNumeric(palette = "RdBu", domain = c(0, 1))
+
+leaflet_wi <- leaflet(wi_merged) |>
+  addTiles() |>
+  addPolygons(
+    weight = 1, fillOpacity = 0.7, 
+    color = ~pal(1 - r_prop),   # so red association with Reps
+    popup = ~paste("District", DISTRICT, "</br>", round(r_prop, 4))
+  ) |>                          # popups show prop Republican
+  setView(lng = -90, lat = 45, zoom = 6.5)
+leaflet_wi
+```
+
 
